# kaggle-pfs

./: .gitignore  Makefile  README.md  mlflow-server.sh  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 01-exploratory.ipynb  10-model-baseline.ipynb  11-2d-embedding.ipynb  12-model-lstm_v1.ipynb  13-model-lstm_v1.1.ipynb
src/kaggle_pfs/: __init__.py
src/kaggle_pfs/data/: readers.py
src/kaggle_pfs/models/: lstm_v1.py
