[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle_pfs"
version = "0.0.1"
description = "kaggle's Predict Future Sales"
authors = [{ name = "Guilherme Higashi", email = "guihigashi@gmail.com" }]
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["kaggle_pfs"]
namespaces = false
